gh pages deploy setup

--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "deploy": "gatsby build && gh-pages -d public -b main"
+  },
   "dependencies": {
     "@iamgarrett/gatsby-theme-gmcm": "^0.1.1",
     "gatsby": "^4.12.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
