--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "gatsby": "^4.12.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
+  },
+  "scripts": {
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   }
 }
