--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@iamgarrett/gatsby-theme-gmcm": "^0.1.1",
+    "@iamgarrett/gatsby-theme-gmcm": "^0.1.1-a",
     "gatsby": "^4.12.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
