--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   },
   "scripts": {
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
