--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^18.0.0"
   },
   "scripts": {
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b main"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
